--- a/doc/algorithm/top100/first/142. 环形链表 II.md
+++ b/doc/algorithm/top100/first/142. 环形链表 II.md
@@ -1,4 +1,4 @@
-<img src="/Users/wuye/code/record/php-interview/assets/:Users:wuye:Library:Application Support:typora-user-images:image-20220426210136477.png" alt="image-20220426210136477" style="zoom:50%;" />
+<img src="https://github.com/wuye251/php-interview/blob/main/assets/142.%E7%8E%AF%E5%BD%A2%E9%93%BE%E8%A1%A8.png" alt="image-20220426210136477" style="zoom:50%;" />
 
 [142. 环形链表 II](https://leetcode-cn.com/problems/linked-list-cycle-ii/)
 
