--- a/doc/algorithm/高频面试题/反转链表.md
+++ b/doc/algorithm/高频面试题/反转链表.md
@@ -1,10 +1,10 @@
-## [206. 反转链表](https://leetcode-cn.com/problems/reverse-linked-list/)
-## [92. 反转链表 II](https://leetcode-cn.com/problems/reverse-linked-list-ii/)
+#### 参考地址
+1. [反转链表](https://leetcode-cn.com/problems/reverse-linked-list/solution/zi-wo-zong-jie-by-wuy9788-qh4s/)
+2. [翻转链表II](https://leetcode-cn.com/problems/reverse-linked-list-ii/submissions/)
 
 
-
-## [206. 反转链表](https://leetcode-cn.com/problems/reverse-linked-list/)
-### 递归
+##### [206. 反转链表](https://leetcode-cn.com/problems/reverse-linked-list/)
+###### 递归
 ```golang []
 /**
  * Definition for singly-linked list.
@@ -25,7 +25,7 @@ func reverseList(head *ListNode) *ListNode {
 	return newRoot
 }
 ```
-### 迭代
+###### 迭代
 ```golang []
 /**
  * Definition for singly-linked list.
@@ -51,8 +51,8 @@ func reverseList(head *ListNode) *ListNode {
 }
 ```
 
-## [92. 反转链表 II](https://leetcode-cn.com/problems/reverse-linked-list-ii/)
-### 递归
+##### [92. 反转链表 II](https://leetcode-cn.com/problems/reverse-linked-list-ii/)
+###### 递归
 ```golang
 /**
  * Definition for singly-linked list.
@@ -85,4 +85,4 @@ func reverse(head *ListNode, level int) *ListNode {
 	return newHead
 }
 ```
-### 迭代(待完成)
+###### 迭代(待完成)
