--- a/doc/mysql/日志文件.md
+++ b/doc/mysql/日志文件.md
@@ -1,38 +1,61 @@
 # 分类
-## 重做日志(redo log)
-## 回滚日志(undo log)
-## 二进制日志(bin log)
-## 错误日志(error log)
-## 慢查询日志(slow log)
-## 一般查询日志
-## 中继日志
+1. 重做日志(redo log)
+
+2. 回滚日志(undo log)
+
+3. 二进制日志(bin log)
+
+4. 错误日志(error log)
+
+5. 慢查询日志(slow log)
+
+6. 一般查询日志
+
+7. 中继日志
 
 
 ### 重做日志(redo log)
-- 事务在提交或者回滚前,每执行一次sql就会写入redo log中,
+- 执行更新时 先写入redo log中  最后再更新到磁盘以及bin log中
+
+##### 使用场景
+
+- mysql宕机时数据恢复
+
 ### 回滚日志(undo log)
-- 
+- 事务开启前的版本数据写入undo log中，待事务回滚或其他事务查询数据时使用
+
+##### 使用场景
+
+- MVCC实现
+- 事务回滚
 
 ### 二进制日志(bin log)
-#### 描述
+##### 描述
+
 - 对于数据库表有插入或者更新的操作都会写入到该日志中,
-#### 作用
+
+##### 作用
+
 - 恢复数据库:将数据库恢复到某个时间点(版本)的数据
 - 复制数据库:将该数据库的数据拷贝到其他机器上
 
 
 ### 错误日志
 - 记录了mysql在启动或者执行时产生的error错误
+- `show variables like 'log_error';`查看当前日志存储路径
 
 ### 慢查询日志
 - 对于一个sql执行时间超过设置阈值时间后,将会记录到慢查询日志中
 - 对于一个sql如果执行时没有走索引也会记录到慢查询日志中(前提需要开启log_queries_not_using_indexes)
 
-#### 命令
+##### 命令
+
 - `show variables like '%long_query%'; ` 当前慢查询的阈值
 - `show variables like 'slow_query_log%';` 当前慢查询是否开启并且查看写入路径
 - `show variables like 'log_queries_not_using_indexes';` 查询是否开启若sql未走索引时记录到慢查询日志中
-#### 技巧
+
+##### 技巧
+
 - 在mysql5.1后可以将慢日志写入mysql.slow_log表中
 	- `show variables like 'log_output';`
 	- `set global log_output='TABLE';`
@@ -41,13 +64,17 @@
 
 	参数log_output是动态的，并且是全局的。我们可以在线进行修改。在上表中我设置了睡眠（sleep）10秒，那么这句SQL语句就会被记录到slow_log表了。
 
-查看slow_log表的定义会发现，该表使用的是CSV引擎，对大数据量下的查询效率可能不高。我们可以把slow_log表的引擎转换到MyISAM，用来进一步提高查询的效率。但是，如果已经启动了慢查询，将会提示错误： 
 
-mysql＞alter table mysql.slow_log engine=myisam；
-ERROR 1580（HY000）：You cannot'ALTER'a log table if logging is enabled
-mysql＞set global slow_query_log=off；
-Query OK，0 rows affected（0.00 sec）
-mysql＞alter table mysql.slow_log engine=myisam；
-Query OK，1 row affected（0.00 sec）
-Records：1 Duplicates：0 Warnings：0
-不能忽视的是，将slow_log表的存储引擎更改为MyISAM后，对数据库还是会造成额外的开销。不过好在很多关于慢查询的参数都是动态的，我们可以方便地在线进行设置或者修改。
+
+#### bin log && redo log && undo log
+
+#### redo log的实现
+
+
+
+
+
+参考资料：
+
+- https://mp.weixin.qq.com/s/Lx4TNPLQzYaknR7D3gmOmQ
+- 
