--- a/doc/mysql/日志文件.md
+++ b/doc/mysql/日志文件.md
@@ -8,7 +8,9 @@
 ## 中继日志
 
 
+
 ### 重做日志(redo log)
+
 - 事务在提交或者回滚前,每执行一次sql就会写入redo log中,
 ### 回滚日志(undo log)
 - 
@@ -32,22 +34,12 @@
 - `show variables like '%long_query%'; ` 当前慢查询的阈值
 - `show variables like 'slow_query_log%';` 当前慢查询是否开启并且查看写入路径
 - `show variables like 'log_queries_not_using_indexes';` 查询是否开启若sql未走索引时记录到慢查询日志中
+- `set global slow_query_log=1;` 开启慢日志
 #### 技巧
 - 在mysql5.1后可以将慢日志写入mysql.slow_log表中
 	- `show variables like 'log_output';`
 	- `set global log_output='TABLE';`
-	- `select sleep (10);'
+	- `select sleep (10);'`
 	- `select * from mysql.slow_log\G`
 
-	参数log_output是动态的，并且是全局的。我们可以在线进行修改。在上表中我设置了睡眠（sleep）10秒，那么这句SQL语句就会被记录到slow_log表了。
 
-查看slow_log表的定义会发现，该表使用的是CSV引擎，对大数据量下的查询效率可能不高。我们可以把slow_log表的引擎转换到MyISAM，用来进一步提高查询的效率。但是，如果已经启动了慢查询，将会提示错误： 
-
-mysql＞alter table mysql.slow_log engine=myisam；
-ERROR 1580（HY000）：You cannot'ALTER'a log table if logging is enabled
-mysql＞set global slow_query_log=off；
-Query OK，0 rows affected（0.00 sec）
-mysql＞alter table mysql.slow_log engine=myisam；
-Query OK，1 row affected（0.00 sec）
-Records：1 Duplicates：0 Warnings：0
-不能忽视的是，将slow_log表的存储引擎更改为MyISAM后，对数据库还是会造成额外的开销。不过好在很多关于慢查询的参数都是动态的，我们可以方便地在线进行设置或者修改。
