--- a/doc/algorithm/专项/动态规划/1入门基础/5不同的二叉搜索树.md
+++ b/doc/algorithm/专项/动态规划/1入门基础/5不同的二叉搜索树.md
@@ -40,9 +40,9 @@ func numTrees(n int) int {
     dp := make([]int, n+1)
     dp[0] = 1
 
-    for i:=1; i<=n; i++ {
-        for j:=1; j<=i; j++ {
-            dp[i] += dp[j-1] * dp[i-j]
+    for i:=1; i<=n; i++ { //遍历总节点数 从1->n
+        for j:=1; j<=i; j++ { //当前左节点+根节点数 从1->n
+          dp[i] += dp[j-1] * dp[i-j] //当前总结点n的种类 += j-1(左子树) * i-j(剩余节点在右树上)
         }
     }
 
