--- a/doc/go/study/基础/数组和切片.md
+++ b/doc/go/study/基础/数组和切片.md
@@ -58,8 +58,8 @@ type slice struct {
 	}
 ```
 
-> - [ ] slice的扩容策略 ？  内存对齐是什么？
-> - [ ] 
+> - [ ] slice的扩容策略 ？ 
+> - [ ] 内存对齐是什么？
 
 ### 切片作为参数传递
 
@@ -103,25 +103,7 @@ func main() {
 */
 ```
 
-
-
-# 并发相关
-
-## goroutine和线程，进程的区别
-
-> 线程包含： 用户态资源， 内核态资源， 每个资源中包含了为这个进程任务所必须的资源、开辟的空间地址，上下文等信息
->
-> 协程goroutine： 仅有用户态资源， 对于线程少了内核态资源， 故而一个协程的大小是小于线程的， 在切换/开辟/销毁操作，代价比线程更小
-
-## channel
-
-> 使多个协程goroutine之间可以进行通信
-
-- 无缓冲管道
-- 有缓冲管道
-
-
-
 参考：
 
 - [《Go程序员面试笔试宝典》](https://golang.design/go-questions/)
+- [面试快答](https://learnku.com/articles/69250)
