--- a/doc/go/study/基础/1.切片.md
+++ b/doc/go/study/基础/1.切片.md
@@ -19,7 +19,7 @@ type slice struct {
 
 ###  [切片扩容](https://golang.design/go-questions/slice/grow/)
 
-- 切片append时，当`len > cap`时，就会触发扩容，go底层通过策略尽可能少的减少扩容产生的内存开辟回收操作，提高效率
+- 切片append时，当`len > cap`时，就会**触发扩容，开辟新空间，并把当前数据拷贝到新空间中，`slice.array`指针指向更新为新空间地址**，  go底层通过策略尽可能少的减少扩容产生的内存开辟回收操作，提高效率
 - 当原slice容量(oldcap)小于256的时候，新slice(newcap)容量为原来的2倍；原slice容量超过256，新slice容量newcap = oldcap+(oldcap+3*256)/4
 [扩容部分源码](https://github.com/golang/go/blob/master/src/runtime/slice.go#L200)
 ```go
@@ -118,12 +118,147 @@ ret  ptr 0xc000004078 val [2 3 4]
 
 ##### 触发扩容时，切片值传递的情况
 
-上面例子中，值传递实参、形参`slice.array`地址相同情况下， 修改副本会影响实参， 
+上面例子中，值传递实参、形参`slice.array`地址相同情况下， 修改副本会影响实参， 上面扩容部分有提到`slice.array`扩容后其地址会更新， 那么在函数中充当形参的slice， 是否修改时会对实参有影响， 在上面的例子基础上，修改一下
+
+```go
+func main() {
+	s := []int{1, 2, 3}
+	fmt.Printf("init ptr %p val %v\n", &s, s)
+
+	changeSlice(s)
+	fmt.Printf("ret  ptr %p val %v\n", &s, s)
+
+}
+
+func changeSlice(s []int) {
+	fmt.Printf("------ changeSlice ptr %p val %v\n", &s, s)
+	for k := range s {
+		s[k] += 1
+	}
+	fmt.Printf("------ changeSlice ptr %p val %v\n", &s, s)
+
+	//新增 追加使起扩容  再进行修改 验证是否实参s会修改
+	s = append(s, 11)
+	for k := range s {
+		s[k] += 1
+	}
+	fmt.Printf("------------ append ptr %p val %v\n", &s, s)
+}
+```
+
+在扩容更新了地址后，实参还是之前的地址， 而形参指向的是新地址， 后面的修改等操作也都是在新地址操作的
+
+结果如下：
+
+```go
+init ptr 0x1400000c030 val [1 2 3]
+------ changeSlice ptr 0x1400000c060 val [1 2 3]
+------ changeSlice ptr 0x1400000c060 val [2 3 4]
+------------ append ptr 0x1400000c060 val [3 4 5 12]
+ret  ptr 0x1400000c030 val [2 3 4]
+```
+
+下面再举一个两者都结合的例子， 供大家学习， 可以先思考下结果应该是什么样的， 中间实参、形参内的数组指针指向以及len、cap是怎样的    ----- 例子参考自https://juejin.cn/post/6888117219213967368
+
+```go
+func main() {
+	slice := make([]int, 2, 3)
+	for i := 0; i < len(slice); i++ {
+		slice[i] = i
+	}
+	fmt.Printf("init slice val %v  ptr %p  len %v  cap %v \n", slice, &slice, len(slice), cap(slice)) // [0,1]  容量是3
+	ret := changeSlice(slice)
+	//slice = [10, 1, 3](但是因为len() cap()修改的拷贝的副本的值 slice实参为修改 len=2 cap=3)
+	//  ret = [10, 100, 3, 4]
+	ret[1] = 111
+	//ret = [10, 111, 3, 4]
+
+	//结果：slice = [10, 1]  ret = [10, 111, 3, 4]
+	fmt.Printf("ret  slice val %v  ptr %p  len %v  cap %v \n", slice, &slice, len(slice), cap(slice))
+	fmt.Printf("ret  ret   val %v ptr %p  len %v  cap %v \n", ret, &ret, len(ret), cap(ret))
+
+}
+
+func changeSlice(s []int) []int {
+	s[0] = 10 //这里还没有触发扩容  所以修改实参   slice = [10, 1]
+	fmt.Printf("----     s val %v     ptr %p  len %v  cap %v \n", s, &s, len(s), cap(s))
+	s = append(s, 3) //未触发扩容 slice = [10, 1, 3]
+	fmt.Printf("----     s val %v   ptr %p  len %v  cap %v \n", s, &s, len(s), cap(s))
+	s = append(s, 4) //触发扩容  所以移动到了新地址  slice = [10, 1, 3]  new = [10, 1, 3, 4]
+	fmt.Printf("----     s val %v ptr %p  len %v  cap %v \n", s, &s, len(s), cap(s))
+	s[1] = 100 //修改新地址数据 new = [10, 100, 3, 4] slice = [10, 1, 3]
+
+	return s
+}
+```
+
+代码中有对应注释了， 这里不再赘述， 总结下值传递切片
+
+>  切片只有在扩容前(函数中)修改原有的元素才会进行修改， 其他情况下，不会影响实参切片
+
+#### 引用(指针)传递
+
+说完一般的`值传递`方式，还有一种就是传的`切片`实际地址，即引用传递/指针传递, 让我们看看会产生什么样的火花
+
+基于上面的例子代码，我们仅改了传参以实参slice地址类型传递, 然后在函数中修改，我们看看会有什么结果：
+
+```golang
+func main() {
+	slice := make([]int, 2, 3)
+	for i := 0; i < len(slice); i++ {
+		slice[i] = i
+	}
+	fmt.Printf("init slice val %v  ptr %p  len %v  cap %v \n", slice, &slice, len(slice), cap(slice)) // [0,1]  容量是3
+	ret := changeSlice(&slice)
+	//slice = [10, 1, 3](但是因为len() cap()修改的拷贝的副本的值 slice实参为修改 len=2 cap=3)
+	//  ret = [10, 100, 3, 4]
+	ret[1] = 111
+	//ret = [10, 111, 3, 4]
+
+	//结果：slice = [10, 1]  ret = [10, 111, 3, 4]
+	fmt.Printf("ret  slice val %v  ptr %p  len %v  cap %v \n", slice, &slice, len(slice), cap(slice))
+	fmt.Printf("ret  ret   val %v ptr %p  len %v  cap %v \n", ret, &ret, len(ret), cap(ret))
+
+}
+
+func changeSlice(s *[]int) []int {
+	(*s)[0] = 10 //这里还没有触发扩容  所以修改实参   slice = [10, 1]
+	fmt.Printf("----     s val %v     ptr %p  len %v  cap %v \n", *s, s, len(*s), cap(*s))
+	*s = append(*s, 3) //未触发扩容 slice = [10, 1, 3]
+	fmt.Printf("----     s val %v   ptr %p  len %v  cap %v \n", *s, s, len(*s), cap(*s))
+	*s = append(*s, 4) //触发扩容  所以移动到了新地址  slice = [10, 1, 3]  new = [10, 1, 3, 4]
+	fmt.Printf("----     s val %v ptr %p  len %v  cap %v \n", *s, s, len(*s), cap(*s))
+	(*s)[1] = 100 //修改新地址数据 new = [10, 100, 3, 4] slice = [10, 1, 3]
+
+	return *s
+}
+```
+
+这个例子中意味着 实参、形参的内容都是`指向实参的地址` 所以不管在修改还是追加扩容时，我们修改的都是实参的内容
+
+结果：
+
+```golang
+init slice val [0 1]  ptr 0x140000ae000  len 2  cap 3 
+----     s val [10 1]     ptr 0x140000ae000  len 2  cap 3 
+----     s val [10 1 3]   ptr 0x140000ae000  len 3  cap 3 
+----     s val [10 1 3 4] ptr 0x140000ae000  len 4  cap 6 
+ret  slice val [10 111 3 4]  ptr 0x140000ae000  len 4  cap 6 
+ret  ret   val [10 111 3 4] ptr 0x140000ae030  len 4  cap 6 
+```
 
 
 
-参考：
+### 总结
 
+1. 数组是定长的， 切片是通过扩容实现动态扩容的，扩容是`slice.array`地址会更新
+2. 值传递切片**只有在扩容前修改切片原始值**会影响实参切片
+3. 引用传递会修改、追加、扩容都会影响实参切片， 因为实参、形参都指向的是实参的地址
+
+
+
+### 参考：
+
+- [切片在函数传递中的使用](https://juejin.cn/post/6888117219213967368)
 - [《Go程序员面试笔试宝典》](https://golang.design/go-questions/)
 - [面试快答](https://learnku.com/articles/69250)
-- [切片在函数传递中的使用](https://juejin.cn/post/6888117219213967368)
