update channel & sync

--- a/doc/go/study/并发/基于共享变量的并发.md
+++ b/doc/go/study/并发/基于共享变量的并发.md
@@ -92,6 +92,8 @@ func main() {
 
 ### 代码如下
 
+我们先来看下如果没有锁的情况下，会导致什么问题出现
+
 #### 没有锁情况下
 
 ```golang
@@ -165,6 +167,8 @@ end ticket ----- -1
 ```
 
 这里我们看到，在未加锁的情况下会造成超卖的情况, 下面我们加上锁之后，看看结果又是怎样的
+
+#### 加锁之后
 
 ```golang
 package main
@@ -257,9 +261,83 @@ end ticket ----- 0
 
 > RWMutex提供两种锁， 分别是读/写锁 Lock/RLock 解锁为Unlock/RUnlock,  更小粒度(读/写维度进行加锁)
 
-### RWMutex和Mutex的区别
+#### RWMutex和Mutex的区别
 
 > 为什么在有sync.Mutex锁后，还需要提供RWMutex锁呢？因为Mutex锁的太绝对了， 在**多数场景下 读 > 写,   所以Mutex这种属于简单暴力，只要加了锁，别的都访问不了（阻塞等待）**，这无疑大大降低了程序并发的能力， 所以在此基础上，出现更细小粒度锁（读/写锁）,  来尽可能提高或者保证并发时加适应的锁来提供高效的性能
+
+### 场景
+
+> 这个例子可能有些许牵强,  等后面有更贴切的进行更新
+>
+> 还是上面售票的场景，我们改的地方是查票的时候，仅进行读锁， 而在售票时，再加上更严格的写锁， 这样做的好处就是查票(人们来询问余票时 可以支持并发的查询), 而在实际售票时，我们在进行让其串行执行
+
+```golang
+package main
+
+import (
+	"fmt"
+	"sync"
+	"time"
+)
+
+func mySaleTicket(windowIndex int) (int, int) {
+	rwmutex.Lock() //售票时加上写锁  等待其他读锁释放
+	defer rwmutex.Unlock()
+
+	if Tickets <= 0 {
+		return -1, Tickets
+
+	}
+	Tickets--
+	fmt.Println(windowIndex, "---saleTicket ----", Tickets)
+	return 1, Tickets
+}
+
+//这里关于查票的情况 其实不加读锁也应该是可以的，因为实际售票方法中加的是读锁，避免了超卖问题
+func getTicket(windowIndex int) int {
+	rwmutex.RLock()
+	defer rwmutex.RUnlock()
+	fmt.Println(windowIndex, "---getTickets ----", Tickets)
+	return Tickets
+}
+
+func window(windowIndex int, wait *sync.WaitGroup) {
+	fmt.Println(windowIndex, "---wind start ----")
+	time.Sleep(1 * time.Second) //这里是为了等待所有窗口(goroutine)都创建好
+	for {
+		if getTicket(windowIndex) > 0 { //有余票继续售卖
+			time.Sleep(1 * time.Second) //查到余票后先进行一些操作(让其同步更新 出现问题)
+			err, _ := mySaleTicket(windowIndex)
+			fmt.Println(fmt.Sprintf("%d sale [status] %d", windowIndex, err))
+		} else { //没有余票了 关门下班
+			break
+		}
+	}
+	wait.Done()
+}
+
+//票数
+var Tickets int = 5
+
+//窗口数
+var Window int = 3
+
+//锁
+var rwmutex sync.RWMutex
+
+func main() {
+
+	var wait sync.WaitGroup
+	wait.Add(Window)
+	for i := 0; i < Window; i++ {
+		go window(i, &wait)
+	}
+
+	wait.Wait()
+	fmt.Println("end ticket -----", Tickets)
+}
+
+```
 
 ## channel
 
@@ -267,13 +345,100 @@ end ticket ----- 0
 
 > go经典设计准则：不要通过共享内存的方式进行通信，而是应该通过通信的方式共享内存。  一般的语言多线程传递数据使用了共享内存，但在并发时频繁加锁会降低其并发性能， go提供了channel管道，即通过管道通信的方式，进行传递数据。
 
-### 无缓冲管道
+#### 无缓冲管道
 
 > 发送/读取， 都需要对方接受后，才能继续执行， 如外卖到了之后，没有放外卖的地方，外卖小哥给你打电话后一直等你下楼取了外卖后才能送下一单，这时就处于`阻塞等待`状态
 
-### 有缓冲管道
+#### 有缓冲管道
 
 > 发送/读取， 可以存入/读取带有缓存大小空间的管道，读取之前已经存入的数据信息,  如外卖到了之后，有放外卖的小桌子，外卖小哥打电话后放到桌子上就去送下一单了， 你下楼出门之后， 从桌子上拿走小哥已经放了的外卖
+
+channel部分关于概念仅提一些，如果对该知识点薄弱或者需要巩固的，可以看[《圣经》][https://books.studygolang.com/gopl-zh/ch8/ch8-04.html]关于channel的文章, 本篇文章主要讲如何通过channel来优雅的实现互斥锁/共享锁
+
+### channel实现互斥锁
+
+这里我们和互斥锁那块说的对比修改，通过make(chan int, 1)的作为锁， 有一个写入后，其他协程需要写入时会阻塞，直到当前协程将管道将其内容读取出来后，其他协程可以继续操作
+
+> 这个内容可能是通过channel实现了互斥锁， 但没有达到**优雅**，后面再考虑更合适优化的代码
+
+```golang
+package main
+
+import (
+	"fmt"
+	"sync"
+	"time"
+)
+
+func ChanSaleTicket(windowIndex int) int {
+	Tickets--
+	fmt.Println(windowIndex, "---saleTicket ----", Tickets)
+	return Tickets
+}
+
+func ChanGetTicket(windowIndex int) int {
+	fmt.Println(windowIndex, "---getTickets ----", Tickets)
+	return Tickets
+}
+
+func ChanWindow(windowIndex int) {
+	fmt.Println(windowIndex, "---wind start ----")
+	time.Sleep(1 * time.Second) //这里是为了等待所有窗口(goroutine)都创建好
+	for {
+		// mutex.Lock()
+		myChan <- windowIndex
+		if ChanGetTicket(windowIndex) > 0 { //有余票继续售卖
+			time.Sleep(1 * time.Second) //查到余票后先进行一些操作(让其同步更新 出现问题)
+			fmt.Println(windowIndex, "sale success", ChanSaleTicket(windowIndex))
+			// mutex.Unlock()
+			<-myChan
+		} else { //没有余票了 关门下班
+			// mutex.Unlock()
+			<-myChan
+			break
+		}
+	}
+	EndChan <- windowIndex
+}
+
+//票数
+var Tickets int = 5
+
+//窗口数
+var Window int = 3
+
+//锁
+var myChan = make(chan int, 1)
+var EndChan = make(chan int, Tickets)
+var mutex sync.RWMutex
+
+func main() {
+
+	// var wait sync.WaitGroup
+	// wait.Add(Window)
+	for i := 0; i < Window; i++ {
+		go ChanWindow(i)
+	}
+
+	// wait.Wait()
+	i := 0
+	for {
+		select {
+		case <-EndChan:
+			i++
+			fmt.Println("get one goroutine run over ", i, "chan len= ", len(EndChan))
+			if i == Window {
+				fmt.Println(fmt.Sprintf("all goroutine run over.  bye..."))
+				close(EndChan)
+				return
+			}
+		}
+	}
+}
+
+```
+
+
 
 ## 参考
 
