--- a/doc/go/study/并发/基于共享变量的并发.md
+++ b/doc/go/study/并发/基于共享变量的并发.md
@@ -1,4 +1,4 @@
-> 对于go中多协程并发时，如何使共享变量能在预期中进行更新修改？在go中能实现的方法有sync.Mutex/RWMutex、sync.WaitGroup、channel这三种办法来做到，go语言中推荐的是用channel通信来实现内存共享， 那么该如何使用channel实现， 还有其他的方法如何实现， 本篇文章将围绕这些三个方法的概念、使用来讲解
+> 对于go中多协程并发时，如何使共享变量能在预期中进行更新修改？在go中能实现的方法有sync.Mutex/RWMutex、sync.WaitGroup、channel这三种办法来做到，go语言中推荐的是用channel中的值传递来实现， 那么该如何使用channel实现， 还有其他的方法如何实现， 本篇文章将围绕这些三个方法的概念、使用来讲解
 
 
 
