链表更新readme 添加了readme

--- a/doc/algorithm/专项/2.链表/翻转链表.md
+++ b/doc/algorithm/专项/2.链表/翻转链表.md
@@ -1,3 +1,5 @@
+> 翻转链表，递归实现、迭代实现，我们记住两种实现方法对应的操作方法， 在递归时，我们用三个节点模拟，  迭代时，用两个节点，三个变量进行模拟，记住翻转的操作，有助于我们掌握翻转链表题目的解题方法很有效
+
 # [206. 反转链表](https://leetcode.cn/problems/reverse-linked-list/)
 
 ## 题目描述
@@ -195,10 +197,5 @@ func reverse(head *ListNode, length int) *ListNode {
 
 **空间复杂度** O(m) m为翻转的长度  
 
-# [25. K 个一组翻转链表](https://leetcode.cn/problems/reverse-nodes-in-k-group/)
+>  困难难度：[25. K 个一组翻转链表](https://leetcode.cn/problems/reverse-nodes-in-k-group/)
 
-## 题目描述
-
-## 解法步骤
-
-## 代码如下
