每日算法提交

--- a/doc/algorithm/list/541.反转字符串II.md
+++ b/doc/algorithm/list/541.反转字符串II.md
@@ -29,10 +29,34 @@
 
 ## 解题思路
 
-
+- 判断[当前索引位置, 当前索引位置+k]是否在字符串范围内
+  - 如果在，仅翻转前k个
+  - 如果不在，全部翻转
+- 提供一个字符串的翻转函数
 
 ## 代码如下
 
 ```go
+func reverseStr(s string, k int) string {
+    ss := []byte(s)
+    for curIndex:=0; curIndex<len(s); curIndex+=2*k {
+        if curIndex+k < len(s) {
+            reverse(ss[curIndex:curIndex+k])
+        } else {
+            reverse(ss[curIndex:len(s)])
+        }
+    }
+
+    return string(ss)
+}
+
+func reverse(ss []byte) {
+    left, right := 0, len(ss)-1
+    for left < right {
+        ss[left], ss[right] = ss[right], ss[left]
+        left++
+        right--
+    }
+}
 ```
 
