--- a/doc/algorithm/记录算法.md
+++ b/doc/algorithm/记录算法.md
@@ -1,8 +1,3 @@
-# 数组
-
-## 滚动数组
-
-- #### [62. 不同路径](https://leetcode.cn/problems/unique-paths/)
-
-- #### [63. 不同路径 II](https://leetcode.cn/problems/unique-paths-ii/)
-
+[数组]
+- [删除超过三个的重复项]https://leetcode.cn/problems/remove-duplicates-from-sorted-array-ii/description/?envType=study-plan-v2&envId=top-interview-150
+    - 双指针解决 还是有点难度的
