--- a/doc/algorithm/记录算法.md
+++ b/doc/algorithm/记录算法.md
@@ -1,4 +1,7 @@
 [数组]
+1. 双指针/三指针
+    - 原地移动
+    - 翻转
 - [删除超过三个的重复项]https://leetcode.cn/problems/remove-duplicates-from-sorted-array-ii/description/?envType=study-plan-v2&envId=top-interview-150
     - 双指针解决 还是有点难度的
 - [189. 轮转数组](https://leetcode.cn/problems/rotate-array/description/?envType=study-plan-v2&envId=top-interview-150)
