--- a/doc/algorithm/记录算法.md
+++ b/doc/algorithm/记录算法.md
@@ -7,3 +7,8 @@
 - [189. 轮转数组](https://leetcode.cn/problems/rotate-array/description/?envType=study-plan-v2&envId=top-interview-150)
     - 技巧题  翻转+部分翻转
     - 还有最大公约数解法 没看会
+ 
+[动态规划]
+1. 经典问题 - 股票
+- [121. 买卖股票的最佳时机](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/description/?envType=study-plan-v2&envId=top-interview-150)
+- [122. 买卖股票的最佳时机 II](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-ii/?envType=study-plan-v2&envId=top-interview-150)
