--- a/doc/go/study/基础/1.切片.md
+++ b/doc/go/study/基础/1.切片.md
@@ -249,6 +249,21 @@ ret  ret   val [10 111 3 4] ptr 0x140000ae030  len 4  cap 6
 
 
 
+### 系列考题
+
+- (切片的截取/拷贝 底层)下面是关于原切片的修改
+
+```go
+	a := []int{1, 2, 3, 4}
+	b := a[1:3] // 截取原切片
+	fmt.Println(b, len(b), cap(b))
+	b[0] = 44 // 修改原切片
+	fmt.Println(b, len(b), cap(b))
+	b = append(b, 5) // 追加
+	fmt.Println(b, len(b), cap(b))
+	fmt.Println(a, len(a), cap(a))
+```
+
 ### 总结
 
 1. 数组是定长的， 切片是通过扩容实现动态扩容的，扩容是`slice.array`地址会更新
