--- a/doc/go/study/1.基础/2.map.md
+++ b/doc/go/study/1.基础/2.map.md
@@ -1,3 +1,8 @@
+- 底层结构是什么
+- 扩容机制
+- 为什么遍历是无序的
+  
+
 ### 结构
 
 ```go
@@ -30,4 +35,8 @@ type hmap struct {
 ### 附录
 
 - [煎鱼-map](https://eddycjy.gitbook.io/golang/di-7-ke-shu-ju-jie-gou/map-access)
+
+- [比较全的](https://golang.design/go-questions/map/principal/)
+
+  
 
