贪心-跳跃游戏II

--- a/doc/algorithm/list/45.跳跃游戏II.md
+++ b/doc/algorithm/list/45.跳跃游戏II.md
@@ -34,3 +34,28 @@
 > - `1 <= nums.length <= 104`
 > - `0 <= nums[i] <= 1000`
 > - 题目保证可以到达 `nums[n-1]`
+
+
+
+```go
+func jump(nums []int) int {
+	ans := 0
+	end := 0
+	maxPos := 0
+	for i := 0; i < len(nums)-1; i++ { // 只需要到倒数第二个节点 之后再++即可
+		maxPos = max(maxPos, nums[i]+i)
+		if i == end { // 到达上个台阶最远跳到的位置后
+			end = maxPos // 下一个最远能跳到的end更新
+			ans++        // 次数++
+		}
+	}
+	return ans
+}
+func max(i, j int) int {
+	if i > j {
+		return i
+	}
+	return j
+}
+```
+
