--- a/doc/go/study/3.并发/基于共享变量的并发.md
+++ b/doc/go/study/3.并发/基于共享变量的并发.md
@@ -265,6 +265,20 @@ end ticket ----- 0
 
 > 为什么在有sync.Mutex锁后，还需要提供RWMutex锁呢？因为Mutex锁的太绝对了， 在**多数场景下 读 > 写,   所以Mutex这种属于简单暴力，只要加了锁，别的都访问不了（阻塞等待）**，这无疑大大降低了程序并发的能力， 所以在此基础上，出现更细小粒度锁（读/写锁）,  来尽可能提高或者保证并发时加适应的锁来提供高效的性能
 
+##### Lock() 和 Unlock()
+
+- Lock() 加写锁，Unlock() 解写锁
+- 如果在加写锁之前已经有其他的读锁和写锁，则 Lock() 会阻塞直到该锁可用，为确保该锁可用，已经阻塞的 Lock() 调用会从获得的锁中排除新的读取器，即写锁权限高于读锁，有写锁时优先进行写锁定
+- 在 Lock() 之前使用 Unlock() 会导致 panic 异常
+
+##### RLock() 和 RUnlock()
+
+- RLock() 加读锁，RUnlock() 解读锁
+- RLock() 加读锁时，如果存在写锁，则无法加读锁；当只有读锁或者没有锁时，可以加读锁，读锁可以加载多个
+- RUnlock() 解读锁，RUnlock() 撤销单词 RLock() 调用，对于其他同时存在的读锁则没有效果
+- 在没有读锁的情况下调用 RUnlock() 会导致 panic 错误
+- RUnlock() 的个数不得多余 RLock()，否则会导致 panic 错误
+
 ### 场景
 
 > 这个例子可能有些许牵强,  等后面有更贴切的进行更新
@@ -353,7 +367,7 @@ func main() {
 
 > 发送/读取， 可以存入/读取带有缓存大小空间的管道，读取之前已经存入的数据信息,  如外卖到了之后，有放外卖的小桌子，外卖小哥打电话后放到桌子上就去送下一单了， 你下楼出门之后， 从桌子上拿走小哥已经放了的外卖
 
-channel部分关于概念仅提一些，如果对该知识点薄弱或者需要巩固的，可以看[《圣经》][https://books.studygolang.com/gopl-zh/ch8/ch8-04.html]关于channel的文章, 本篇文章主要讲如何通过channel来优雅的实现互斥锁/共享锁
+channel部分关于概念仅提一些，重点分享如何通过channel来优雅的实现互斥锁/共享锁
 
 ### channel实现互斥锁
 
