--- a/doc/go/study/3.并发/2.channel.md
+++ b/doc/go/study/3.并发/2.channel.md
@@ -17,10 +17,13 @@
 #### 无缓冲管道
 
 > 发送/读取， 都需要对方接受后，才能继续执行， 如外卖到了之后，没有放外卖的地方，外卖小哥给你打电话后一直等你下楼取了外卖后才能送下一单，这时就处于`阻塞等待`状态
+> 场景：超时处理、优雅重启(等价close(chan))
 
 #### 有缓冲管道
 
 > 发送/读取， 可以存入/读取带有缓存大小空间的管道，读取之前已经存入的数据信息,  如外卖到了之后，有放外卖的小桌子，外卖小哥打电话后放到桌子上就去送下一单了， 你下楼出门之后， 从桌子上拿走小哥已经放了的外卖
+>
+> 场景：定量日志推送，并发数量控制
 
 ### 发送数据
 
