--- a/doc/2.algorithm/list/36. 有效的数独.md
+++ b/doc/2.algorithm/list/36. 有效的数独.md
@@ -51,10 +51,60 @@
 解释：除了第一行的第一个数字从 5 改为 8 以外，空格内其他数字均与 示例1 相同。 但由于位于左上角的 3x3 宫内有两个 8 存在, 因此这个数独是无效的。
 ```
 
- 
-
 **提示：**
 
 - `board.length == 9`
 - `board[i].length == 9`
 - `board[i][j]` 是一位数字（`1-9`）或者 `'.'`
+
+### 思路
+
+- 行map
+- 列map
+- 盒子map:行列计算得到当前盒子
+
+```go
+func isValidSudoku(board [][]byte) bool {
+	rowMap := make([]map[byte]struct{}, len(board))
+	colMap := make([]map[byte]struct{}, len(board[0]))
+	blockMap := map[string]map[byte]struct{}{}
+
+	for row := 0; row < 9; row++ {
+		for col := 0; col < 9; col++ {
+			curCh := board[row][col]
+			if curCh == '.' {
+				continue
+			}
+			if _, ok := rowMap[row][curCh]; ok {
+				return false
+			}
+			if _, ok := colMap[col][curCh]; ok {
+				return false
+			}
+			// 主要是盒子的元素判定
+			blockRow := row / 3
+			blockCol := col / 3
+			blockKey := fmt.Sprintf("%d_%d", blockRow, blockCol)
+			if _, ok := blockMap[blockKey][curCh]; ok {
+				return false
+			}
+
+			// 不存在
+			if rowMap[row] == nil {
+				rowMap[row] = make(map[byte]struct{})
+			}
+			if colMap[col] == nil {
+				colMap[col] = make(map[byte]struct{})
+			}
+			if blockMap[blockKey] == nil {
+				blockMap[blockKey] = make(map[byte]struct{})
+			}
+			rowMap[row][curCh] = struct{}{}
+			colMap[col][curCh] = struct{}{}
+			blockMap[blockKey][curCh] = struct{}{}
+		}
+	}
+	return true
+}
+```
+
