--- a/doc/1.go/study/4.内存管理/2.垃圾收集器.md
+++ b/doc/1.go/study/4.内存管理/2.垃圾收集器.md
@@ -88,9 +88,131 @@
 
 > 不存在黑色对象引用到白色对象的指针。
 
+<img src="http://img.hahaguai.cn/local/image-20231217224104370.png" style="zoom:50%; float:left" />
+
 #### 弱三色不变式
 
-> 所有黑色对象引用白色的对象处于灰色保护状态.
+> 所有黑色对象引用白色的对象处于灰色保护状态.(白色上游有灰色对象)
+
+<img src="http://img.hahaguai.cn/local/image-20231217224144835.png" alt="image-20231217224144835" style="zoom:30%; float:left" />
+
+#### *插入屏障
+
+> A对象引用B对象时，B对象被标记为灰色。 **满足：强三色不变式(不存在黑色引用白色对象的情况)**
+>
+> 仅在堆上会触发：插入屏障仅会在堆内存中生效，不对栈内存空间生效，这是因为go在并发运行时，大部分的操作都发生在栈上，函数调用会非常频繁，并且栈的空间较小。数十万goroutine的栈都进行屏障保护自然会有性能问题。
+
+<img src="http://img.hahaguai.cn/local/image-20231217225552020.png" alt="image-20231217225552020" style="zoom:50%; float:left" />
+
+堆上出发写屏障，引用的对象8直接染色为灰色
+
+<img src="http://img.hahaguai.cn/local/image-20231217225703211.png" alt="image-20231217225703211" style="zoom:33%; float:left" />
+
+本次结果为下图：
+
+<img src="http://img.hahaguai.cn/local/image-20231217225757049.png" alt="image-20231217225757049" style="zoom:33%;float:left" />
+
+但是对象9是被对象1引用的下游对象，但因为栈上没有写屏障，所以不做处理的话会被删除
+
+故：栈上的gc会再遍历一次所有节点，防止误删。即：所有节点重置为白色，此时会添加STW暂时保护。
+
+<img src="http://img.hahaguai.cn/local/image-20231217230006430.png" alt="image-20231217230006430" style="zoom:33%;float:left" />
+
+最终结果如下图：
+
+<img src="http://img.hahaguai.cn/local/image-20231217230039137.png" alt="image-20231217230039137" style="zoom:33%;float:left" />
+
+最终白色对象5、6会被删除回收
+
+##### 不足
+
+插入写屏障还是需要STW来重新扫描栈
+
+#### *删除屏障
+
+> 被删除的对象，自身为灰色或者白色，那么被标记为灰色(**满足弱三色不变式**) 
+
+<img src="http://img.hahaguai.cn/local/image-20231217231637251.png" alt="image-20231217231637251" style="zoom:45%;float:left" />
+
+<img src="http://img.hahaguai.cn/local/image-20231217231726753.png" alt="image-20231217231726753" style="zoom:45%;float:left" />
+
+被删除的对象被标记为灰色
+
+<img src="http://img.hahaguai.cn/local/image-20231217231816060.png" alt="image-20231217231816060" style="zoom:45%;float:left" />
+
+因被删除的对象被加入到了黑色中，没有被删除，直到下一轮gc才会被删除
+
+##### 不足
+
+会导致回收精度降低，部分应被删除的对象延迟到下一轮才被删除
+
+## *混合写屏障
+
+#### 场景1：对象备一个堆对象删除引用，成为栈对象的下游。
+
+<img src="http://img.hahaguai.cn/local/image-20231217232156978.png" alt="image-20231217232156978" style="zoom:50%;float:left" />
+
+存在对象7在堆上，被对象4删除，栈上的对象1引用
+
+<img src="http://img.hahaguai.cn/local/image-20231217232516489.png" alt="image-20231217232516489" style="zoom:45%;float:left" />
+
+<img src="http://img.hahaguai.cn/local/image-20231217234030177.png" alt="image-20231217234030177" style="zoom:50%;float:left" />
+
+#### 场景2：对象被一个栈对象删除引用，成为另一个栈对象的下游
+
+<img src="http://img.hahaguai.cn/local/image-20231217234553070.png" alt="image-20231217234553070" style="zoom:50%;float:left" />
+
+<img src="http://img.hahaguai.cn/local/image-20231217234735894.png" alt="image-20231217234735894" style="zoom:50%;float:left" />
+
+#### 场景3：对象被一个堆对象删除引用，成为另一个堆对象的下游
+
+![image-20231217235023529](http://img.hahaguai.cn/local/image-20231217235023529.png)
+
+#### 场景4：对象从一个栈对象删除引用，成为另一个堆的下游
+
+<img src="http://img.hahaguai.cn/local/image-20231217235243966.png" alt="image-20231217235243966" style="zoom:50%;float:left" />
+
+因为堆上有删除写屏障,所以在删除对象7时会被置位灰色
+
+<img src="http://img.hahaguai.cn/local/image-20231217235347273.png" alt="image-20231217235347273" style="zoom:50%;float:left" />
+
+
+
+## 总结
+
+- 早期
+
+  - 暂停全部过程STW，停止时间过长，造成程序卡顿
+
+- V1.5三色标记法
+
+  - 白色、灰色、黑色，直到只有黑色和白色后
+  - 白色被删除
+
+  > 也需要STW，如果不需要STW会触发两个条件导致的问题：
+  >
+  > 1. 白色对象被黑色对象引用
+  > 2. 灰色下游白色对象被删除
+
+- 强三色不变式/弱三色不变式
+
+  - 强三色：不允许黑色引用白色
+  - 弱三色：黑色可以引用白色，但白色上游必须有灰色
+
+- 屏障机制
+
+  >  满足以上两个不变式，有了这两个机制
+
+  - 插入屏障
+
+    - 插入白色时，白色被置为灰色(堆上触发，栈上需要重新扫描STW)
+
+    - 不足：还是需要STW
+
+  - 删除屏障
+
+    - 删除对象时，应被置为灰色(延迟删除)
+    - 不足：回收精度降低
 
 ## 附录
 
