--- a/doc/1.go/study/4.内存管理/2.垃圾收集器.md
+++ b/doc/1.go/study/4.内存管理/2.垃圾收集器.md
@@ -96,7 +96,7 @@
 
 <img src="http://img.hahaguai.cn/local/image-20231217224144835.png" alt="image-20231217224144835" style="zoom:30%; float:left" />
 
-#### *插入屏障
+#### *插入写屏障
 
 > A对象引用B对象时，B对象被标记为灰色。 **满足：强三色不变式(不存在黑色引用白色对象的情况)**
 >
@@ -128,7 +128,7 @@
 
 插入写屏障还是需要STW来重新扫描栈
 
-#### *删除屏障
+#### *删除写屏障
 
 > 被删除的对象，自身为灰色或者白色，那么被标记为灰色(**满足弱三色不变式**) 
 
@@ -218,3 +218,4 @@
 
 - [刘丹冰b站视频](https://www.bilibili.com/video/BV1wz4y1y7Kd/?p=2&spm_id_from=pageDriver&vd_source=f53bb49fb78a32947a9360dd16a1cf58)
 - [刘丹冰learnku文档](https://learnku.com/articles/68141)
+- [《Go语言设计与实现》7.2节----draveness](https://draveness.me/golang/docs/part3-runtime/ch07-memory/golang-garbage-collector/)
