--- a/doc/2.algorithm/list/206.反转链表.md
+++ b/doc/2.algorithm/list/206.反转链表.md
@@ -73,6 +73,18 @@ func reverseList(head *ListNode) *ListNode {
 
     return newHead
 }
+
+// 优化版
+func reverseList(head *ListNode) *ListNode {
+	if head == nil || head.Next == nil {
+		return head
+	}
+	node := reverseList(head.Next)
+	head.Next.Next = head
+	head.Next = nil // 当前head是最后一位 所以可以直接用nil赋值
+
+	return node
+}
 ```
 
 **时间复杂度** O(n) 数组长度
