--- a/doc/1.go/面试知识点汇总.md
+++ b/doc/1.go/面试知识点汇总.md
@@ -1,6 +1,44 @@
 # 知识点
 
+1. <font color=red>**简述GC**</font>
+
+   1. 标记清除 v1.3
+
+      > - 根对象出发寻找并标记可达对象
+      > - 遍历堆中的对象，将未标记的对象回收
+      >
+      > 以上步骤都需要暂停程序：STW； 扫描整个堆；
+
+   2. 三色标记 v.15
+
+      > _黑白灰三色_
+      >
+      > - 最开始全部放入白色标记表
+      > - 扫表根节点，可达对象标记为灰色，一次遍历之后当前灰色根节点置为黑色
+      > - 重复，直到灰色表无数据
+      > - 白色清除
+      >
+      > 在标记过程中还是需要STW，如果没有STW会有两次场景下gc问题
+      >
+      > - 在gc时，黑色链接白色
+      > - 在gc时，灰色断开白色
+      >
+      > 针对上面两种情况，有了下面两个公式以及插入写、删除写屏障
+
+   3. 三色标记+混合写屏障v1.8
+
+      > 强三色：黑色不能直接引用白色
+      >
+      > 弱三色：黑色引用白色对象处于灰色保护状态
+      >
+      > 应用到下面：
+      >
+      > 插入写：**黑引用白，则白色置为灰色(仅在堆中生效)  栈上则是全部重置白色，STW开启 重新扫描一遍**
+      >
+      > 删除写：灰引用白色，断开时，白色变为灰色(弱三色？) 下次gc才会被删除
+
 2. make和new的区别
+
 > 1.make适用slice、map、chan；new适用基本类型；
 > 2.make返回引用，new返回地址
 > 3.make初始空间，new为零值，并回收内存空间
@@ -41,32 +79,8 @@ PASS
 > 2. 拓展普通结构体时的内存对齐， 小的在前面排列
 > [参考链接](https://juejin.cn/post/7244809769794207801)
 
-# 基本类型
-## 切片
-1. slice如果可以知道大小， 那么最好在创建时指定大小，来节省空间以及多余的扩容操作
-```go
-make([]int, 0, len(xxx))
-```
-## map
-1. map元素遍历时顺序是随机的， 所以请不要依赖map的顺序
-2. 
-## 函数方法
-1. 最好定义方法  而不是函数(类似成员方法，而不是函数)
-```go
-// 方法
-func (structName) func1() {
+6. for循环里 传递value引用 将会全是最后一个元素内容
 
-}
-
-// 函数
-func func2() {
-
-}
-```
-如果定义成方法，那么同一个包下可能会有名称冲突的问题
-
-## for循环
-1. for循环里 传递value引用 将会全是最后一个元素内容
 ```go
 // 这里不能为了考虑节省空间而使用指针
 for _, value := range sliceList {
@@ -86,6 +100,10 @@ for _, value := range sliceList {
 ```
 
 # 并发
+
+1. 有无缓冲channel区别
+2. 
+
 ## 协程中的panic
 panic触发只会中断当前协程的执行，不会影响其他协程，所以如果在为了能捕获到协程中的panic错误，我们应该用recover()进行捕捉处理, 发现问题，解决问题
 例如:
@@ -141,39 +159,3 @@ func main() {
 	time.Sleep(1)
 }
 ```
-
-# 并发编程
-## 协程panic
-```go
-package main
-
-import (
-	"fmt"
-	"sync"
-)
-
-func main() {
-	var wg sync.WaitGroup
-	for i := 10; i > 0; i-- {
-		wg.Add(1)
-		go func() {
-			defer func() {
-				fmt.Println("done")
-				wg.Done()
-				if err := recover(); err != nil {
-					fmt.Println("panic recover")
-				}
-
-			}()
-			// defer wg.Done()
-			func() {
-				panic("test panic")
-			}()
-		}()
-	}
-	wg.Wait()
-	fmt.Println(2)
-}
-```
-
-## 优雅重启(TODO)
