--- a/doc/2.algorithm/重点题目.md
+++ b/doc/2.algorithm/重点题目.md
@@ -1,4 +1,4 @@
-### 链表
+## 链表
 
 - ***翻转链表(总是学不会)
 
@@ -8,3 +8,10 @@
 
 - 虚拟头结点
   - [82. 删除排序链表中的重复元素 II](./list/82. 删除排序链表中的重复元素 II.md)
+
+# 二叉树
+
+> 构建二叉树， 数组边界需要注意
+
+1. [前中序 构造二叉树](./list/105. 从前序与中序遍历序列构造二叉树.md)
+2. [中后序 构造二叉树](./list/106. 从中序与后序遍历序列构造二叉树.md)
